ZODB Requires:
~~~~~~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Split off from CPSDocument into a separate package CPSSchemas.
- Select Widget (displays a menu to choose one string)
- CheckBox Widget (displays a checkbox to choose true/false)
- MultiSelect Widget (display a select multiple to choose a list of strings)
- First RTE (Epoz) integration. Only one per page right now. (unstable)
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- sf code cleaning
- Vocabularies are now used for all "choice" widgets.
- String/Date/Text as is_required properties